correction spacing homepage

--- a/sass/components/_box.scss
+++ b/sass/components/_box.scss
@@ -5,9 +5,8 @@
   border-radius: 15px;
   overflow: hidden;
   @include abst.large {
-    max-width: 20.9375rem;
-    margin: 0 auto;
     width: 100%;
+    max-width: 20.9375rem;
   }
 
   &__wrapper-img {
