--- a/sass/components/_instructioncontener.scss
+++ b/sass/components/_instructioncontener.scss
@@ -13,7 +13,7 @@
   transition: 0.2s background-color ease-in-out;
   @include abst.large {
     max-width: 20.125rem;
-    margin: auto;
+
     width: 100%;
   }
 
